GGB-2386 fix both the stylebar and canvas overflowing from the dockpanel
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@62100 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -1265,7 +1265,7 @@
 		z-index: 11;
 		left: auto !important;
 		bottom: auto !important;
-		max-width:100%;
+		max-width: ~'calc(100% - 4px)';
 		padding: 0 0 4px 4px;
 		overflow: hidden;
 	}
